Fixed an issue with body spacing becoming glitchy on responsive sites under certain resolutions

--- a/layout/base.j2
+++ b/layout/base.j2
@@ -63,7 +63,7 @@
 
     {% block body %}
 
-    <div class="container" id="top" style="padding-top: 60px;">
+    <div class="container" id="top">
       {% filter markdown -%}
       {% block container %}
 
