Added an option to drop down nav menus on hover, not click

--- a/layout/base.j2
+++ b/layout/base.j2
@@ -16,6 +16,7 @@
     {% block basecss %}
     <link href="media/css/bootstrap.css" rel="stylesheet">
     <link href="media/css/bootstrap-responsive.css" rel="stylesheet">
+    {% if nav_hover %}<link href="media/css/nav-hover.css" rel="stylesheet">{% endif %}
     <style type="text/css">
         body {
             padding-bottom: 40px;
