--- a/layout/topbar.j2
+++ b/layout/topbar.j2
@@ -22,7 +22,7 @@
   {% endblock topbar %}
 </div>
 
-<div style="margin-bottom: 60px;"></div>-
+<div style="margin-bottom: 60px;"></div>
 
 {{ super() }} {# Use this to include the rest of the body block as it was originally defined #}
 
